# TesteGPT

./: .gitignore  README.md  app.js  app.py  calculator.py  index.html  package-lock.json  package.json  script.js  server.js  stopwatch.py  style.css  styles.css  timer.py
GeoLeader_Cpp/: CMakeLists.txt  README.md
GeoLeader_Cpp/src/: main.cpp
GeoLeader_Cpp/src/core/: GameManager.cpp  GameManager.hpp
GeoLeader_Pygame/: README.md  config.py  main.py
GeoLeader_Pygame/data/: countries.json
GeoLeader_Pygame/src/: diplomacy.py  economy.py  events.py  game_state.py  map_renderer.py  military.py  politics.py  society.py  ui.py
public/: app.js  index.html  style.css
templates/: index.html  results.html
tic-tac-toe/: index.html  pretrained_qtable.json  script.js  style.css  train_offline.js
